@@ -8,7 +8,8 @@ CHANGELOG
 * Improved address name regex based filter with support to insert objects value: $$netmask$$, $$netmask.blank32$$, $$value$$, $$value.no-netmask$$
 
 utils:
-rules-edit: new actions 'tag-remove-all'
+rules-edit: new action 'name-rename' to allow renaming based on template string. ie:  'name-Rename:H-$$value.no-netmask-$$current.name$$'
+rules-edit: new action 'tag-remove-all'
 rules-edit: new filter 'service has.regex'
 address-edit: new filters 'overriden.at.lower.level' and 'overrides.upper.level', 'ip4.includes-full', 'ip4.includes-full-or-partial', 'object is.iprange', 'object is.fqdn'
 address-edit: new actions 'name-removePrefix, name-removeSuffix'
